new proj strucs

--- a/web/templates/prediction.html
+++ b/web/templates/prediction.html
@@ -41,7 +41,7 @@
 						<select id="team1" class="dropdown">
 							<option value="" disabled selected>Select Team 1</option>
 							{{range .Team}}
-							<option value="{{.Name}}">{{.Name}}</option>
+							<option value="{{.Value}}">{{.Value}}</option>
 							{{end}}
 							<!-- Add more teams as needed -->
 						</select>
@@ -52,7 +52,7 @@
 						<select id="team2" class="dropdown">
 							<option value="" disabled selected>Select Team 2</option>
 							{{range .Team}}
-							<option value="{{.Name}}">{{.Name}}</option>
+							<option value="{{.Value}}">{{.Value}}</option>
 							{{end}}
 							<!-- Add more teams as needed -->
 						</select>
@@ -68,7 +68,7 @@
 								<select id="team1-hero1" class="dropdown">
 									<option value="" disabled selected>Select Hero 1</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 								</select>
 							</div>
@@ -78,7 +78,7 @@
 								<select id="team2-hero1" class="dropdown">
 									<option value="" disabled selected>Select Hero 1</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -91,7 +91,7 @@
 								<select id="team1-hero2" class="dropdown">
 									<option value="" disabled selected>Select Hero 2</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -102,7 +102,7 @@
 								<select id="team2-hero2" class="dropdown">
 									<option value="" disabled selected>Select Hero 2</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -115,7 +115,7 @@
 								<select id="team1-hero3" class="dropdown">
 									<option value="" disabled selected>Select Hero 3</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -126,7 +126,7 @@
 								<select id="team2-hero3" class="dropdown">
 									<option value="" disabled selected>Select Hero 3</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -139,7 +139,7 @@
 								<select id="team1-hero4" class="dropdown">
 									<option value="" disabled selected>Select Hero 4</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -150,7 +150,7 @@
 								<select id="team2-hero4" class="dropdown">
 									<option value="" disabled selected>Select Hero 4</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -163,7 +163,7 @@
 								<select id="team1-hero5" class="dropdown">
 									<option value="" disabled selected>Select Hero 5</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
@@ -174,7 +174,7 @@
 								<select id="team2-hero5" class="dropdown">
 									<option value="" disabled selected>Select Hero 5</option>
 									{{range .Hero}}
-									<option value="{{.Name}}">{{.Name}}</option>
+									<option value="{{.Value}}">{{.Value}}</option>
 									{{end}}
 									<!-- Add more heroes as needed -->
 								</select>
