--- a/web/templates/teams.html
+++ b/web/templates/teams.html
@@ -28,16 +28,28 @@
 
 		<main>
 			<section class="team-analysis">
-				<h1>Team Analysis</h1>
-				<h2>Team A vs Team B</h2>
-
-				<h3>Winrates:</h3>
-				<p>Team A Winrate: 60%</p>
-				<p>Team B Winrate: 40%</p>
-
-				<h3>Playstyles:</h3>
-				<p>Team A prefers aggressive early game.</p>
-				<p>Team B focuses on late-game carries.</p>
+				<table>
+					<thead>
+						<tr>
+							<th>Team</th>
+							<th>Player 1</th>
+							<th>Player 2</th>
+							<th>Player 3</th>
+							<th>Player 4</th>
+							<th>Player 5</th>
+						</tr>
+					</thead>
+					<tbody>
+						{{range .TeamsRoaters}}
+						<tr>
+							<td>{{.Team.Value}}</td>
+							{{range .Players}}
+							<td>{{.Value}}</td>
+							{{end}}
+						</tr>
+						{{end}}
+					</tbody>
+				</table>
 			</section>
 		</main>
 
